Test CSS (assuming CSS should use utf-8). Run tests that use stash.py in sequence to avoid problems. Use long timeout. Let's not test step 4 in the spec.

--- a/html/infrastructure/urls/resolving-urls/query-encoding/windows-1251.html
+++ b/html/infrastructure/urls/resolving-urls/query-encoding/windows-1251.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=windows-1251>
 <title>Resolving URLs, URL character encoding, windows-1251</title>
+<meta name="timeout" content="long">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/utils.js"></script>
