--- a/html/infrastructure/urls/resolving-urls/query-encoding/utf-8.html
+++ b/html/infrastructure/urls/resolving-urls/query-encoding/utf-8.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Resolving URLs, URL character encoding, utf-8</title>
+<meta name="timeout" content="long">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/utils.js"></script>
