--- a/html/infrastructure/urls/resolving-urls/query-encoding/windows-1252.html
+++ b/html/infrastructure/urls/resolving-urls/query-encoding/windows-1252.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <meta charset=windows-1252>
 <title>Resolving URLs, URL character encoding, windows-1252</title>
+<meta name="timeout" content="long">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="/common/utils.js"></script>
