--- a/IndexedDB/idbcursor_advance_index4.htm
+++ b/IndexedDB/idbcursor_advance_index4.htm
@@ -28,7 +28,7 @@
           cursor_rq = db.transaction("test")
                         .objectStore("test")
                         .index("index")
-                        .openCursor(undefined, IDBCursor.PREV);
+                        .openCursor(undefined, "prev");
 
         cursor_rq.onsuccess = t.step_func(function(e) {
             var cursor = e.target.result,
