--- a/IndexedDB/idbobjectstore_createIndex5-emptykeypath.htm
+++ b/IndexedDB/idbobjectstore_createIndex5-emptykeypath.htm
@@ -19,15 +19,14 @@
             objStore.add("object_" + i, i);
 
         var rq = objStore.createIndex("index", "")
-        rq.onerror = function() { console.log("error: " + rq.error.name); }
-        rq.onsuccess = function() { console.log("success"); }
+        rq.onerror = function() { assert_unreached("error: " + rq.error.name); }
+        rq.onsuccess = function() { }
 
         objStore.index("index")
                 .get('object_4')
                 .onsuccess = t.step_func(function(e) {
             assert_equals(e.target.result, 'object_4', 'result');
         });
-        console.log(objStore.indexNames[0]);
     }
 
     open_rq.onsuccess = function() {
