--- a/IndexedDB/transaction-lifetime-blocked.htm
+++ b/IndexedDB/transaction-lifetime-blocked.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Test events opening a second database when one connection is open already</title>
+<title>Blocked event</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script src="support.js"></script>
@@ -18,7 +18,6 @@
         // 1
         openrq.onupgradeneeded = t.step_func(function(e) {
             events.push("open." + e.type);
-            console.log("onupgrd 1 " + events);
             e.target.result.createObjectStore('store');
         });
 
@@ -27,15 +26,14 @@
             db = e.target.result;
 
             events.push("open." + e.type);
-            console.log("succ " + events);
 
             // 3
             db.onversionchange = t.step_func(function(e) {
                 events.push("db." + e.type);
-                console.log("versionchange " + events);
+
                 assert_equals(e.oldVersion, 3, "old version");
                 assert_equals(e.newVersion, 4, "new version");
-                db.close();
+                // Do not close db here (as we should)
             });
 
             // Errors
@@ -56,15 +54,20 @@
         assert_equals(db + "", "[object IDBDatabase]");
         assert_array_equals(db.objectStoreNames, [ "store" ]);
 
-        console.log("opensecond " + events);
         var openrq2 = indexedDB.open('db', 4);
 
         // 4
+        openrq2.onblocked = t.step_func(function(e) {
+            events.push("open2." + e.type);
+            // We're closing connection from the other open()
+            db.close();
+        });
+
+        // 5
         openrq2.onupgradeneeded = t.step_func(function(e) {
             db2 = e.target.result;
 
             events.push("open2." + e.type);
-            console.log("onupgrd 2 " + events);
 
             assert_equals(db2 + "", "[object IDBDatabase]");
 
@@ -74,15 +77,15 @@
             db2.abort = fail(t, "db2.abort");
         });
 
-        // 5
+        // 6
         openrq2.onsuccess = t.step_func(function(e) {
             events.push("open2." + e.type);
-            console.log("success 2 " + events);
 
             assert_array_equals(events,
                 [ "open.upgradeneeded",
                   "open.success",
                   "db.versionchange",
+                  "open2.blocked",
                   "open2.upgradeneeded",
                   "open2.success",
                 ]);
@@ -92,7 +95,6 @@
 
         // Errors
         openrq2.onerror = fail(t, "open2.error");
-        openrq2.onblocked = fail(t, "open2.blocked");
     }
 
 
@@ -100,7 +102,6 @@
     add_completion_callback(function(tests) {
         if (db2) db2.close();
         indexedDB.deleteDatabase('db');
-        console.log("delete... " + events);
     })
 
 </script>
