--- a/html/semantics/tabular-data/the-thead-element/HTMLTableTHead01.html
+++ b/html/semantics/tabular-data/the-thead-element/HTMLTableTHead01.html
@@ -4,8 +4,7 @@
 <title>NIST DOM HTML Test - TABLE</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="../common/domtests-common.js"></script>
-<link href="http://www.w3.org/TR/html5/the-table-element.html#dom-table-thead" rel="help">
+<link href="http://www.w3.org/TR/html5/tabular-data.html#the-thead-element" rel="help">
 <link rel="author" title="NIST">
 </head>
 <body>
