--- a/html/semantics/tabular-data/the-tfoot-element/HTMLTableTFoot02.html
+++ b/html/semantics/tabular-data/the-tfoot-element/HTMLTableTFoot02.html
@@ -4,8 +4,7 @@
 <title>NIST DOM HTML Test - TABLE</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="../common/domtests-common.js"></script>
-<link href="http://www.w3.org/TR/html5/the-table-element.html#dom-table-caption" rel="help">
+<link href="http://www.w3.org/TR/html5/tabular-data.html#the-tfoot-element" rel="help">
 <link rel="author" title="NIST">
 </head>
 <body>
@@ -81,29 +80,29 @@
 
 
 <script>
-var domtest = async_test("The caption attribute returns the tables CAPTION or void if it does not     exist.      Retrieve the CAPTION element from within the first TABLE element.");
+var domtest = async_test("The tFoot attribute returns the tables TFOOT or null if it does not exist. Retrieve the TFOOT element from within the first TABLE element.");
 
 on_event(window, "load", domtest.step_func(function (dom_event) {
     var nodeList;
       var testNode;
-      var vcaption;
+      var vsection;
       var doc;
       doc = window.document;
       nodeList = doc.getElementsByTagName("table");
       assert_equals(nodeList.length,3);
 testNode = nodeList.item(0);
-      vcaption = testNode.caption;
+      vsection = testNode.tFoot;
 
-      assert_equals(vcaption, null);
+      assert_equals(vsection, null);
     
     domtest.done();
 }));
 
 </script>
-<p>The caption attribute returns the tables CAPTION or void if it does not
+<p>The tFoot attribute returns the tables TFOOT or null if it does not
     exist.
 
-    Retrieve the CAPTION element from within the first TABLE element.  
-    Since one does not exist it should be void.</p>
+    Retrieve the TFOOT element from within the first TABLE element.  
+    Since one does not exist it should be null.</p>
 <div id="log"></div>
 </body></html>
