--- a/html/semantics/tabular-data/the-thead-element/HTMLTableTHead02.html
+++ b/html/semantics/tabular-data/the-thead-element/HTMLTableTHead02.html
@@ -4,8 +4,7 @@
 <title>NIST DOM HTML Test - TABLE</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="../common/domtests-common.js"></script>
-<link href="http://www.w3.org/TR/html5/the-table-element.html#dom-table-caption" rel="help">
+<link href="http://www.w3.org/TR/html5/tabular-data.html#the-thead-element" rel="help">
 <link rel="author" title="NIST">
 </head>
 <body>
@@ -81,31 +80,29 @@
 
 
 <script>
-var domtest = async_test("The caption attribute returns the tables CAPTION.");
+var domtest = async_test("The tHead attribute returns the tables THEAD or null if it does not exist. Retrieve the THEAD element from within the first TABLE element.");
 
 on_event(window, "load", domtest.step_func(function (dom_event) {
     var nodeList;
       var testNode;
-      var vcaption;
-      var valign;
+      var vsection;
       var doc;
       doc = window.document;
       nodeList = doc.getElementsByTagName("table");
       assert_equals(nodeList.length,3);
-testNode = nodeList.item(1);
-      vcaption = testNode.caption;
+testNode = nodeList.item(0);
+      vsection = testNode.tHead;
 
-      valign = vcaption.align;
-
-      assert_equals(valign,"top");
-       
+      assert_equals(vsection, null);
+    
     domtest.done();
 }));
 
 </script>
-<p>The caption attribute returns the tables CAPTION.
+<p>The tHead attribute returns the tables THEAD or null if it does not
+    exist.
 
-    Retrieve the align attribute of the CAPTION element from the second
-    TABLE element and examine its value.</p>
+    Retrieve the THEAD element from within the first TABLE element.  
+    Since one does not exist it should be null.</p>
 <div id="log"></div>
 </body></html>
