--- a/contributors/intel/submitted/css3-flexbox/align-self-012.html
+++ b/contributors/intel/submitted/css3-flexbox/align-self-012.html
@@ -5,7 +5,7 @@
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.3. Cross-axis Alignment: the 'align-items' and 'align-self' properties" href="http://www.w3.org/TR/css3-flexbox/#align-self">
 <link rel="help" href="http://www.w3.org/TR/css3-flexbox/#align-items">
-<link rel="match" href="align-self-001-ref.html">
+<link rel="match" href="ref-filled-green-100px-square.xht">
 <meta name="flags" content="">
 <meta name="assert" content="The initial value of 'align-self' property is 'auto'">
 <style>
@@ -13,19 +13,19 @@
     align-items: stretch;
     background-color: red;
     display: flex;
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
   }
   #test div {
     background-color: green;
-    width: 30px;
+    width: 25px;
   }
   .auto {
     align-self: auto;
   }
 </style>
 <body>
-  <p>Test passes if there is a filled green square and no red.</p>
+  <p>Test passes if there is a filled green square and <strong>no red</strong>.</p>
   <div id="test">
     <div class="auto"></div>
     <div class="auto"></div>
