--- a/contributors/intel/submitted/css3-flexbox/align-self-013.html
+++ b/contributors/intel/submitted/css3-flexbox/align-self-013.html
@@ -5,7 +5,7 @@
 <link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="8.3. Cross-axis Alignment: the 'align-items' and 'align-self' properties" href="http://www.w3.org/TR/css3-flexbox/#align-self">
 <link rel="help" href="http://www.w3.org/TR/css3-flexbox/#align-items">
-<link rel="match" href="align-self-001-ref.html">
+<link rel="match" href="ref-filled-green-100px-square.xht">
 <meta name="flags" content="">
 <meta name="assert" content="The 'align-self' property is invalid if applied to flex container">
 <style>
@@ -14,23 +14,23 @@
     align-self: flex-end;
     background-color: red;
     display: flex;
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
   }
   #test div {
     background-color: green;
-    height: 60px;
-    width: 30px;
+    height: 50px;
+    width: 25px;
   }
   #cover {
     background-color: green;
-    height: 60px;
-    margin-top: -60px;
-    width: 120px;
+    height: 50px;
+    margin-top: -50px;
+    width: 100px;
   }
 </style>
 <body>
-  <p>Test passes if there is a filled green square and no red.</p>
+  <p>Test passes if there is a filled green square and <strong>no red</strong>.</p>
   <div id="test">
     <div></div>
     <div></div>
