Link to the (newly) correct canonical spec URL.

--- a/contributors/mozilla/submitted/css-variables/test_variable_legal_values.html
+++ b/contributors/mozilla/submitted/css-variables/test_variable_legal_values.html
@@ -4,7 +4,7 @@
   <title>CSS Variables Allowed Syntax</title>
   <link rel="author" title="L. David Baron" href="http://dbaron.org/">
   <link rel="author" title="Mozilla Corporation" href="http://mozilla.com/" />
-  <link rel="help" href="http://www.w3.org/TR/css-variables/#defining-variables">
+  <link rel="help" href="http://www.w3.org/TR/css-variables-1/#defining-variables">
   <meta name="assert" content='The <value> type used in the syntax above is defined as anything matching the "value" production in CSS 2.1 Chapter 4.1 [CSS21].'>
   <script src="http://w3c-test.org/resources/testharness.js"></script>
   <script src="http://w3c-test.org/resources/testharnessreport.js"></script>
