And update metadata_cache.

--- a/contributors/mozilla/submitted/css-variables/test_variable_legal_values.html
+++ b/contributors/mozilla/submitted/css-variables/test_variable_legal_values.html
@@ -29,8 +29,8 @@
   "unbalanced_close_bracket_in_something_balanced": { "assert": "Value not allowed within variable: unbalanced close bracket in something balanced" },
   "unbalanced_close_paren_in_something_balanced": { "assert": "Value not allowed within variable: unbalanced close paren in something balanced" },
   "unbalanced_close_brace_in_something_balanced": { "assert": "Value not allowed within variable: unbalanced close brace in something balanced" },
-  "CDO_at_top_level": { "assert": "Value not allowed within variable: CDO at top level" },
-  "CDC_at_top_level": { "assert": "Value not allowed within variable: CDC at top level" },
+  "CDO_at_top_level": { "assert": "Value allowed within variable: CDO at top level" },
+  "CDC_at_top_level": { "assert": "Value allowed within variable: CDC at top level" },
   "semicolon_not_at_top_level_value_unused": { "assert": "Value allowed within variable: semicolon not at top level (value -> unused)" },
   "CDO_not_at_top_level_value_unused": { "assert": "Value allowed within variable: CDO not at top level (value -> unused)" },
   "CDC_not_at_top_level_value_unused": { "assert": "Value allowed within variable: CDC not at top level (value -> unused)" }
