--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-filter.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-filter.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>CSS Test: Blended element with filter.</title>
-		<link rel="author" title="Mihai Tica" href="mitica@adobe.com">
-		<link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-		<meta name="assert" content="Test checks that an element having a filter effect and mix-blend-mode blends with its parent element.">
-		<link rel="match" href="reference/mix-blend-mode-filter-ref.html">
-	</head>
-	<style>
-		div {
-			width: 100px;
-			height: 100px;
-		}
-	</style>
-	<body>
-		<p>Test passes if you can see a green blurred square. <br>
-		The test fails if the square is drawn with red. </p>
+    <head>
+        <title>CSS Test: Blended element with filter.</title>
+        <link rel="author" title="Mihai Tica" href="mitica@adobe.com">
+        <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
+        <meta name="assert" content="Test checks that an element having a filter effect and mix-blend-mode blends with its parent element.">
+        <link rel="match" href="reference/mix-blend-mode-filter-ref.html">
+    </head>
+    <style type="text/css">
+        div {
+            width: 100px;
+            height: 100px;
+        }
+    </style>
+    <body>
+        <p>Test passes if you can see a green blurred square. <br>
+        The test fails if the square is drawn with red. </p>
 
-		<div style="background: #FF0;">
-			<div style="background: #F00; mix-blend-mode: difference; filter: opacity(0.9);"></div>
-		</div>
-	</body>
+        <div style="background: #FF0;">
+            <div style="background: #F00; mix-blend-mode: difference; filter: opacity(0.9);"></div>
+        </div>
+    </body>
 </html>
