--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-animation.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-animation.html
@@ -4,7 +4,9 @@
         <title>CSS Test: Blended element with animation</title>
         <link rel="author" title="Mihai Tica" href="mitica@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-        <meta name="assert" content="Test checks that an element with mix-blend-mode an animation blends with the parent element.">
+        <meta name="assert" content="Test checks that an element with mix-blend-mode and animation blends with the parent element.">
+        <link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
+        <link rel="reviewer" title="Mirela Budaes" href="mailto:mbudaes@adobe.com">
         <link rel="match" href="reference/mix-blend-mode-animation-ref.html">
         <style type="text/css">
             div {
