--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-image.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-image.html
@@ -6,6 +6,8 @@
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that mix-blend-mode is applied to an img element.">
         <meta name="flags" content="image">
+        <link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
+        <link rel="reviewer" title="Mirela Budaes" href="mailto:mbudaes@adobe.com">
         <link rel="mismatch" href="reference/mix-blend-mode-image-notref.html">
         <style type="text/css">
             div {
