--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-paragraph-background-image.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-paragraph-background-image.html
@@ -6,6 +6,8 @@
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that test a paragraph element blends with the parent element having background image.">
         <meta name="flags" content="svg">
+        <link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
+        <link rel="reviewer" title="Mirela Budaes" href="mailto:mbudaes@adobe.com">
         <link rel="match" href="reference/mix-blend-mode-paragraph-background-image-ref.html">
         <style type="text/css">
             div {
