--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video.html
@@ -5,6 +5,8 @@
         <link rel="author" title="Mihai Tica" href="mitica@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
         <meta name="assert" content="Test checks that mix-blend-mode is applied to a video element.">
+        <link rel="reviewer" title="Rik Cabanier" href="mailto:cabanier@adobe.com">
+        <link rel="reviewer" title="Mirela Budaes" href="mailto:mbudaes@adobe.com">
         <link rel="mismatch" href="reference/mix-blend-mode-video-notref.html">
         <style type="text/css">
             div {
