Addressing another round of comments.

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-video.html
@@ -17,7 +17,7 @@
         </style>
     </head>
     <body>
-        <p>Test passes if you can see a green circle.</p>
+        <p>Test passes if you can see a green circle over a blue background.</p>
         <div>
             <video autoplay style="mix-blend-mode: difference">
                 <source src="../support/red_circle.mp4" type="video/mp4">
