Make bidi-001 pass condition clear

--- a/html/semantics/text-level-semantics/the-bdo-element/bidi-001-ref.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bidi-001-ref.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
 <meta charset="UTF-8">
-<title>directional type</title>
-<meta name="assert" content="Test text bidirectionality using the bdo element">
+<title>directional type reference</title>
 </head>
-<body dir='ltr'>
-<div dir='ltr'>
-WERBEH
-</div>
+<body>
+<p>Test passes if there is text 'WERBEH'.</p>
+<div>WERBEH</div>
 </body>
 </html>
