--- a/html/semantics/text-level-semantics/the-bdo-element/bidi-001.html
+++ b/html/semantics/text-level-semantics/the-bdo-element/bidi-001.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
 <meta charset="UTF-8">
 <title>directional type</title>
@@ -8,8 +8,8 @@
 <meta name="assert" content="Test text bidirectionality using the bdo element">
 </head>
 <body dir='ltr'>
+<p>Test passes if there is text 'WERBEH'.</p>
 <bdo dir="rtl">HEBREW</bdo>
-</div>
 </body>
 </html>
 
