--- a/dom/nodes/getElementsByClassName-19.htm
+++ b/dom/nodes/getElementsByClassName-19.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html><head>
     <title>getElementsByClassName</title>
-    <meta content="get class from children of element" name="description">
+    <meta content="get elements in document" name="description">
     <link href="http://www.w3.org/TR/domcore/#dom-document-getelementsbyclassname" rel="help">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
 </head>
     <body>
-        <div id='log'></div>
+       <div id="log"></div>
         <div>
             <div>
                 <a class="text link" href="#foo">test link #foo</a>
@@ -39,14 +39,16 @@
             </tfoot>
         </table>
         <div class="xt te">xt te</div>
-        
+
         <script type="text/javascript">
-            test(function()
-            {
-                var collection = document.getElementsByTagName("table")[0].getElementsByClassName("te xt");
-                assert_equals(collection.length, 1);
-                assert_equals(collection[0].parentNode.nodeName, "TR");
-            }, "get class from children of element");
+    test(function ()
+          {
+           var collection = document.getElementsByClassName("text");
+           assert_equals(collection.length, 4);
+           assert_equals(collection[0].parentNode.nodeName, "DIV");
+           assert_equals(collection[1].parentNode.nodeName, "DIV");
+           assert_equals(collection[2].parentNode.nodeName, "TABLE");
+           assert_equals(collection[3].parentNode.nodeName, "TR");
+          }, "get elements in document");
         </script>
-    
 </body></html>
