--- a/dom/nodes/getElementsByClassName-21.htm
+++ b/dom/nodes/getElementsByClassName-21.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html><head>
-    <title>getElementsByClassName</title>
-    <meta content="get elements in document" name="description">
+        <title>getElementsByClassName</title>
+        <meta content="delete element from collection" name="description">
     <link href="http://www.w3.org/TR/domcore/#dom-document-getelementsbyclassname" rel="help">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
 </head>
     <body>
-       <div id="log"></div>
+        <div id="log"></div>
         <div>
             <div>
                 <a class="text link" href="#foo">test link #foo</a>
@@ -40,15 +40,13 @@
         </table>
         <div class="xt te">xt te</div>
 
-        <script type="text/javascript">          
-	  test(function ()
-          {
-           var collection = document.getElementsByClassName("text");
-           assert_equals(collection.length, 4);
-           assert_equals(collection[0].parentNode.nodeName, "DIV");
-           assert_equals(collection[1].parentNode.nodeName, "DIV");
-           assert_equals(collection[2].parentNode.nodeName, "TABLE");
-           assert_equals(collection[3].parentNode.nodeName, "TR");
-          }, "get elements in document");
+        <script type="text/javascript">
+            test(function()
+            {
+                var collection = document.getElementsByClassName("text1");
+                assert_equals(collection.length, 1)
+                document.getElementsByTagName("table")[0].deleteRow(1);
+                assert_equals(collection.length, 0);
+            }, "delete element from collection");
         </script>
 </body></html>
