--- a/dom/nodes/getElementsByClassName-26.htm
+++ b/dom/nodes/getElementsByClassName-26.htm
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html><head>
-        <meta charset='utf-8'>
         <title>getElementsByClassName</title>
-        <meta content="handle unicode chars" name="description">
+        <meta content="multiple class attributes" name="description">
     <link href="http://www.w3.org/TR/domcore/#dom-document-getelementsbyclassname" rel="help">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
 </head>
     <body>
-        <div id="log"></div>
-        <div>
-            <div>
-                <a class="ΔЙあ叶葉 말 link" href="#foo">ΔЙあ叶葉 말 link</a>
+       <div id="log"></div>
+         <div class="te xt">
+            te xt
+            <div class="te">
+                te; xt
+                <a class="text link" href="#foo">test link #foo</a>
             </div>
             <b class="text">text</b>
         </div>
-        <div class="ΔЙあ叶葉 קم">ΔЙあ叶葉 קم</div>
-        
-        <script type="text/javascript">
+        <div class="xt te">xt te</div>
+         <script type="text/javascript">
             test(function()
             {
-                var collection = document.getElementsByClassName("ΔЙあ叶葉");
+                var collection = document.getElementsByClassName("te xt");
+
                 assert_equals(collection.length, 2);
-                assert_equals(collection[0].parentNode.nodeName, "DIV");
+                assert_equals(collection[0].parentNode.nodeName, "BODY");
                 assert_equals(collection[1].parentNode.nodeName, "BODY");
-            }, "handle unicode chars");
+            }, "multiple class attributes");
         </script>
-    
 </body></html>
