--- a/contributors/intel/submitted/css3-transitions/transition-timing-function-002.html
+++ b/contributors/intel/submitted/css3-transitions/transition-timing-function-002.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>CSS Transitions Test: transition-timing-function - 'ease' equivalent to 'cubic-bezier(0.25, 0.1, 0.25, 1.0)'</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
-<link rel="author" title="Shiyou Tan" href="shiyoux.tan@intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="2.3. The 'transition-timing-function' Property" href="http://www.w3.org/TR/css3-transitions/#transition-timing-function">
 <meta name="flags" content="interact">
 <meta name="assert" content="The 'transition-timing-function' property set 'ease' is equivalent to cubic-bezier(0.25, 0.1, 0.25, 1.0)">
