--- a/contributors/intel/submitted/css3-transitions/transition-timing-function-012.html
+++ b/contributors/intel/submitted/css3-transitions/transition-timing-function-012.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <title>CSS Transitions Test: transition-timing-function - steps(-2)</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
-<link rel="author" title="Shiyou Tan" href="shiyoux.tan@intel.com">
+<link rel="author" title="Shiyou Tan" href="mailto:shiyoux.tan@intel.com">
 <link rel="help" title="2.3. The 'transition-timing-function' Property" href="http://www.w3.org/TR/css3-transitions/#transition-timing-function">
 <meta name="flags" content="interact">
 <meta name="assert" content="Test checks that the 'steps()' function with negative number is invalid, the transition-timing-function will use 'ease' as default.">
