convert audio_001 and audio_002 into reftest split audio_003 into 1 testharness and 1 reftest

--- a/html/semantics/embedded-content-0/the-audio-element/audio_003.htm
+++ b/html/semantics/embedded-content-0/the-audio-element/audio_003.htm
@@ -28,7 +28,7 @@ Media plays automatically when 'autoplay' is true. (audio)
       <td>Test Assertion</td>
     </tr>
     <tr>
-      <td id='test_0_assertion'>Test passes if the text 'PASS' appears to the left and the text 'Your browser does not support media elements.' does not appear anywhere on this page.</td>
+      <td id='test_0_assertion'>Test passes if the text 'PASS' appears to the left.</td>
     </tr>
   </table>
 <pre>
@@ -48,7 +48,6 @@ so without stopping.
     document.write(
       "<audio id='audio0' src='" + getAudioURI("/media/sound_5") + "'" + 
       " onplaying='do_playing(event);' autoplay>" +
-      "Your browser does not support media elements." +
       "</audio>"
     );
 
