--- a/pointerlock/idlharness.html
+++ b/pointerlock/idlharness.html
@@ -57,7 +57,9 @@ partial interface MouseEvent {
   idl_array.add_untested_idls(document.getElementById("untested_idl").textContent);
   idl_array.add_idls(document.getElementById("idl").textContent);
 
-  idl_array.add_objects({Performance: ["window.performance"]});
+  idl_array.add_objects({ Document: ["window.document"],
+                          Element: ["window.document.documentElement"],
+                          MouseEvent: ["new MouseEvent('pointerlockchange')"] });
 
   idl_array.test();
 })();
