Move and cleanup Microsoft's canvas tests.

--- a/2dcontext/transformations/canvas_transformations_scale_001-ref.htm
+++ b/2dcontext/transformations/canvas_transformations_scale_001-ref.htm
@@ -1,4 +1,4 @@
-<!doctype HTML> 
+<!doctype HTML>
 <html>
     <head>
         <title>HTML5 Canvas Test: scale() transformation</title>
@@ -6,7 +6,6 @@
     </head>
     <body>
         <p>Description: The scale(x, y) method must add the scaling transformation described by the arguments to the transformation matrix.</p>
-        <p>Test passes if there is no red visible on the page and a black rectangle is seen on the page.</p>
-        <div><img alt='black rectangle' src="/support/images/black-rectangle.png"></div>
+        <div><img alt='black rectangle' src="/images/black-rectangle.png"></div>
     </body>
 </html>
