--- a/2dcontext/building-paths/canvas_complexshapes_arcto_001-ref.htm
+++ b/2dcontext/building-paths/canvas_complexshapes_arcto_001-ref.htm
@@ -1,4 +1,4 @@
-<!doctype HTML> 
+<!doctype HTML>
 <html>
     <head>
         <title>HTML5 Canvas Test:  arcTo() adds to subpath if same point</title>
@@ -6,7 +6,6 @@
     </head>
     <body>
         <p>Description: If x1,y1 and x2,y2 are the same point, then arcTo must add x1,y1 to the subpath, and connect that point to x0,y0 with a straight line.</p>
-        <p>Test passes if there is a straight, horizontal line seen on the page.</p>
-        <div><img src="../images/canvas-line.png" alt="line" /></div>
+        <div><img src="/images/canvas-line.png" alt="line" /></div>
     </body>
 </html>
