--- a/2dcontext/building-paths/canvas_complexshapes_beziercurveto_001-ref.htm
+++ b/2dcontext/building-paths/canvas_complexshapes_beziercurveto_001-ref.htm
@@ -1,4 +1,4 @@
-<!doctype HTML> 
+<!doctype HTML>
 <html>
     <head>
         <title>HTML5 Canvas Test:  bezierCurveTo() must ensure subpaths</title>
@@ -6,7 +6,6 @@
     </head>
     <body>
         <p>Description: bezierCurveTo(cp1x, cp1y, cp2x, cp2y, x, y) must ensure there is a subpath for the point (cp1x,cp1y) if the context has no subpaths, then it must connect the last point in the subpath to the point (x,y).</p>
-        <p>Test passes if two vertical lines and one curved line are seen below in the shape of a smiley face.</p>
-        <div><img src='../images/smiley.png' alt='smiley' /></div>
+        <div><img src='/images/smiley.png' alt='smiley' /></div>
     </body>
 </html>
