--- a/2dcontext/compositing/canvas_compositing_globalcompositeoperation_001-ref.htm
+++ b/2dcontext/compositing/canvas_compositing_globalcompositeoperation_001-ref.htm
@@ -1,4 +1,4 @@
-<!doctype HTML> 
+<!doctype HTML>
 <html>
     <head>
         <title>HTML5 Canvas Test:  globalCompositeOperation "destination-over"</title>
@@ -6,7 +6,6 @@
     </head>
     <body>
         <p>Description: If the globalCompositeOperation is set to "destination-over", display the destination image wherever the destination image is opaque.</p>
-        <p>Test passes if a black rectangle is seen on the page and no red is visible on the page.</p>
-        <div><img alt='black rectangle' src="/support/images/black-rectangle.png"></div>
+        <div><img alt='black rectangle' src="/images/black-rectangle.png"></div>
     </body>
 </html>
