--- a/2dcontext/line-styles/canvas_linestyles_linecap_001-ref.htm
+++ b/2dcontext/line-styles/canvas_linestyles_linecap_001-ref.htm
@@ -1,4 +1,4 @@
-<!doctype HTML> 
+<!doctype HTML>
 <html>
     <head>
         <title>HTML5 Canvas Test: "square" lineCap</title>
@@ -6,7 +6,6 @@
     </head>
     <body>
         <p>Description: The square value of lineCap means that a rectangle with the length of the line width and the width of half the line width, placed flat against the edge perpendicular to the direction of the line, must be added at the end of each line.</p>
-        <p>Test passes if there is no red visible on the page and a black rectangle is seen on the page.</p>
-        <div><img src='/support/images/black-rectangle.png' alt='back rect' /></div>
+        <div><img src='/images/black-rectangle.png' alt='black rect' /></div>
     </body>
 </html>
