--- a/2dcontext/the-canvas-state/canvas_state_restore_001-ref.htm
+++ b/2dcontext/the-canvas-state/canvas_state_restore_001-ref.htm
@@ -1,4 +1,4 @@
-<!doctype HTML> 
+<!doctype HTML>
 <html>
     <head>
         <title>HTML5 Canvas Test: restore() pops top entry in drawing state stack</title>
@@ -6,7 +6,6 @@
     </head>
     <body>
         <p>Description: restore() pops the top entry in the drawing state stack.</p>
-        <p>Test passes if a rectangle is seen on the page with three colors - ordered from left to right:  yellow, blue, green.  The test fails if this order is not shown or if any red is seen.</p>
-        <div><img src='../images/threecolors.png' alt='3 colors'></div>
+        <div><img src='/images/threecolors.png' alt='3 colors'></div>
     </body>
 </html>
