Try harder to link to tracked specification anchor.

--- a/contributors/mozilla/submitted/css3-transitions/currentcolor-animation-001.html
+++ b/contributors/mozilla/submitted/css3-transitions/currentcolor-animation-001.html
@@ -4,8 +4,8 @@
   <title>CSS Variables Allowed Syntax</title>
   <link rel="author" title="L. David Baron" href="http://dbaron.org/">
   <link rel="author" title="Mozilla Corporation" href="http://mozilla.com/" />
-  <link rel="help" href="http://dev.w3.org/csswg/css-transitions/#animatable-types">
-  <link rel="help" href="https://www.w3.org/Bugs/Public/show_bug.cgi?id=14605">
+  <link rel="help" href="http://www.w3.org/TR/css3-transitions/#animatable-types">
+  <!-- see also https://www.w3.org/Bugs/Public/show_bug.cgi?id=14605 -->
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 <style id="style"></style>
