Tweak test again to force rerun of checker.

--- a/contributors/mozilla/submitted/css3-transitions/currentcolor-animation-001.html
+++ b/contributors/mozilla/submitted/css3-transitions/currentcolor-animation-001.html
@@ -5,7 +5,7 @@
   <link rel="author" title="L. David Baron" href="http://dbaron.org/">
   <link rel="author" title="Mozilla Corporation" href="http://mozilla.com/" />
   <link rel="help" href="http://www.w3.org/TR/css3-transitions/#animatable-types">
-  <!-- see also https://www.w3.org/Bugs/Public/show_bug.cgi?id=14605 -->
+  <!-- also see https://www.w3.org/Bugs/Public/show_bug.cgi?id=14605 -->
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
 <style id="style"></style>
