Resolve issues according to review comments
1. Rename files
2. Change titles
3. Remove the tests duplicate with reflection

Signed-off-by: xiaojunwu <xiaojunx.a.wu@intel.com>

--- a/html/semantics/embedded-content-0/the-embed-element/embed-represent-nothing-01.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed-represent-nothing-01.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: Without src and type attributes</title>
+<title>HTML Test: The embed element without src and type attributes represents nothing</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/embedded-content-0.html#the-embed-element">
-<link rel="match" href="embed_represent_nothing_ref.html">
-<meta name="assert" content="Check if the embed element represents nothing when it is created without src and type attributes">
+<link rel="match" href="embed-represent-nothing-ref.html">
+<meta name="assert" content="Check if the embed element without src and type attributes represents nothing">
 <style>
   embed {
     background-color: red;
