--- a/html/semantics/embedded-content-0/the-embed-element/embed-represent-nothing-02.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed-represent-nothing-02.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: The src and type attributes are removed</title>
+<title>HTML Test: The embed element represents nothing when its type and src attributs are removed</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/embedded-content-0.html#the-embed-element">
-<link rel="match" href="embed_represent_nothing_ref.html">
+<link rel="match" href="embed-represent-nothing-ref.html">
 <meta name="assert" content="Check if the embed element represents nothing when its src and type attributes are removed">
 <style>
   embed {
