--- a/html/semantics/embedded-content-0/the-embed-element/embed-represent-nothing-03.html
+++ b/html/semantics/embedded-content-0/the-embed-element/embed-represent-nothing-03.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: Has a media ancestor</title>
+<title>HTML Test: The embed element represents nothing when it has a media ancestor</title>
 <link rel="author" title="Intel" href="http://www.intel.com">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/embedded-content-0.html#the-embed-element">
-<link rel="match" href="embed_represent_nothing_ref.html">
+<link rel="match" href="embed-represent-nothing-ref.html">
 <meta name="assert" content="Check if the embed element represents nothing when it has a media ancestor">
 <style>
   embed {
@@ -18,4 +18,3 @@
     <embed src="/images/red-16x16.png">
   </video>
 </body>
-
